overflow fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -324,4 +324,8 @@ footer a {
         max-width: 460px;
         margin-bottom: 30px;
     }
+
+    blockquote {
+        overflow-x: auto;
+    }
 }
